[fix] navbar spacing

--- a/src/Navbar/Navbar.module.scss
+++ b/src/Navbar/Navbar.module.scss
@@ -3,7 +3,7 @@
 .Navbar {
   background-color: variables.$navbarColor;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   &Container {
@@ -12,9 +12,10 @@
 }
 
 .Categories {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
   list-style-type: none;
 }
